Updated Guest page

--- a/origin/guest/index.html
+++ b/origin/guest/index.html
@@ -23,8 +23,8 @@ function WM_off(id){
    <tr>
     <td align=center valign=middle>
      <p>Guestbook retired as this page is soo damn old.</p>
-     <p>Most of the people featured on this page tend to hang out over at Jad's <a href="http://www.scifivibe.com/forums/">SciFi Vibe Forums</a>.</p>
-     <p>Or, you can visit my main page <a href="http://www.illallangi.com">www.illallangi.com</a>.</p>
+     <!-- <p>Most of the people featured on this page tend to hang out over at Jad's <a href="http://www.scifivibe.com/forums/">SciFi Vibe Forums</a>.</p> -->
+     <!-- <p>Or, you can visit my main page <a href="http://www.illallangi.com">www.illallangi.com</a>.</p> -->
     </td>
    </tr>
    <tr>
