--- a/origin/index.html
+++ b/origin/index.html
@@ -19,9 +19,9 @@ function WM_off(id){
    <tr></tr>
    <tr height=180>
     <td></td>
-    <td width=200><!-- <img id="imgdiv1" src="image1.png" onmouseover="WM_on('div1'); return false" onmouseout="WM_off('div1'); return false" style="filter:alpha(opacity=50)"> --></td>
+    <td width=200><img id="imgdiv1" src="image1.png" onmouseover="WM_on('div1'); return false" onmouseout="WM_off('div1'); return false" style="filter:alpha(opacity=50)"></td>
     <td width=200><a href="drinks/"><img id="imgdiv2" src="image2.png" onmouseover="WM_on('div2'); return false" onmouseout="WM_off('div2'); return false" style="filter:alpha(opacity=50)" border=0></a></td>
-    <td width=200><!-- <img id="imgdiv3" src="image3.png" onmouseover="WM_on('div3'); return false" onmouseout="WM_off('div3'); return false" style="filter:alpha(opacity=50)"> --></td>
+    <td width=200><img id="imgdiv3" src="image3.png" onmouseover="WM_on('div3'); return false" onmouseout="WM_off('div3'); return false" style="filter:alpha(opacity=50)"></td>
     <td></td>
    </tr>
    <tr height=40>
@@ -40,8 +40,8 @@ function WM_off(id){
    <tr height=180>
     <td></td>
     <td width=200><a href="people/"><img id="imgdiv4" src="image4.png" onmouseover="WM_on('div4'); return false" onmouseout="WM_off('div4'); return false" style="filter:alpha(opacity=50)" border=0></a></td>
-    <td width=200><!-- <img id="imgdiv5" src="image5.png" onmouseover="WM_on('div5'); return false" onmouseout="WM_off('div5'); return false" style="filter:alpha(opacity=50)"> --></td>
-    <td width=200><a href="guest/"><img id="imgdiv6" src="image6.png" onmouseover="WM_on('div6'); return false" onmouseout="WM_off('div6'); return false" style="filter:alpha(opacity=50)" border=0></a></td>
+    <td width=200><img id="imgdiv5" src="image5.png" onmouseover="WM_on('div5'); return false" onmouseout="WM_off('div5'); return false" style="filter:alpha(opacity=50)"></td>
+    <td width=200><img id="imgdiv6" src="image6.png" onmouseover="WM_on('div6'); return false" onmouseout="WM_off('div6'); return false" style="filter:alpha(opacity=50)" border=0></td>
     <td></td>
    </tr>
    <tr></tr>
