--- a/origin/index.html
+++ b/origin/index.html
@@ -21,7 +21,7 @@ function WM_off(id){
     <td></td>
     <td width=200><img id="imgdiv1" src="image1.png" onmouseover="WM_on('div1'); return false" onmouseout="WM_off('div1'); return false" style="filter:alpha(opacity=50)"></td>
     <td width=200><a href="drinks/"><img id="imgdiv2" src="image2.png" onmouseover="WM_on('div2'); return false" onmouseout="WM_off('div2'); return false" style="filter:alpha(opacity=50)" border=0></a></td>
-    <td width=200><img id="imgdiv3" src="image3.png" onmouseover="WM_on('div3'); return false" onmouseout="WM_off('div3'); return false" style="filter:alpha(opacity=50)"></td>
+    <td width=200><a href="party/"><img id="imgdiv3" src="image3.png" onmouseover="WM_on('div3'); return false" onmouseout="WM_off('div3'); return false" style="filter:alpha(opacity=50)" border=0></a></td>
     <td></td>
    </tr>
    <tr height=40>
