Trying out gist

--- a/code/index.html
+++ b/code/index.html
@@ -160,6 +160,7 @@ print &quot;&lt;/html&gt;\n&quot;;</pre>
                 </div>
               </div>
             </div>
+            <script src="https://gist.github.com/2718980.js?file=jane_bday.txt"></script>
             <div class="accordion-group">
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#jane_bday_txt">jane_bday.txt</a>
