Removed gist content; Replaced with gist embed.

--- a/code/index.html
+++ b/code/index.html
@@ -160,7 +160,6 @@ print &quot;&lt;/html&gt;\n&quot;;</pre>
                 </div>
               </div>
             </div>
-            <script src="https://gist.github.com/2718980.js?file=jane_bday.txt"></script>
             <div class="accordion-group">
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#jane_bday_txt">jane_bday.txt</a>
@@ -168,246 +167,8 @@ print &quot;&lt;/html&gt;\n&quot;;</pre>
               <div id="jane_bday_txt" class="accordion-body collapse">
                 <div class="accordion-inner">
                   <pre class="prettyprint linenums">
-http://%ill%/fiftyeight/jane_bday/mvc-037f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-039f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-040f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-041f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-043f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-044f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-045f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-046f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-047f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-048f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-049f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-050f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-052f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-053f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-054f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-055f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-056f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-057f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-058f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-059f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-060f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-061f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-062f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-063f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-064f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-065f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-066f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-067f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-068f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-069f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-070f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-071f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-072f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-073f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-074f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-075f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-076f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-078f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-079f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-080f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-081f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-082f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-083f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-084f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-085f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-086f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-087f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-088f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-089f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-090f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-091f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-092f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-093f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-094f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-095f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-096f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-097f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-098f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-099f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-100f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-101f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-102f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-103f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-104f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-105f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-106f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-107f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-108f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-109f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-110f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-111f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-112f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-113f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-114f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-115f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-116f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-117f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-118f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-119f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-120f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-121f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-122f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-123f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-124f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-125f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-126f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-127f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-128f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-130f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-135f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-136f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-137f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-138f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-139f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-140f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-141f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-142f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-143f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-144f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-145f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-146f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-147f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-148f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-149f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-150f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-151f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-152f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-153f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-154f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-155f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-156f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-157f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-158f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-160f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-165f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-166f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-167f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-168f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-169f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-170f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-171f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-172f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-173f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-174f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-175f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-177f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-178f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-179f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-180f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-182f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-183f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-184f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-185f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-186f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-187f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-188f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-189f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-190f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-191f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-192f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-193f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-194f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-195f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-196f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-197f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-198f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-199f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-202f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-203f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-204f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-205f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-206f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-208f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-209f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-210f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-211f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-212f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-213f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-214f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-215f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-220f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-221f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-222f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-223f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-224f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-225f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-226f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-227f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-228f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-229f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-230f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-231f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-232f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-233f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-234f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-235f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-236f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-237f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-238f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-239f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-240f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-244f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-245f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-246f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-247f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-248f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-255f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-256f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-257f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-264f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-266f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-267f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-269f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-278f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-279f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-280f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-281f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-282f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-283f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-307f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-308f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-309f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-310f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-311f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-323f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-324f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-329f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-330f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-331f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-332f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-333f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-334f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-335f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-336f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-337f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-338f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-339f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-340f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-341f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-342f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-343f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-344f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-345f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-346f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-347f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-348f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-349f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-350f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-351f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-352f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-353f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-354f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-355f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-356f&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-368s&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-369s&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-372s&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-373s&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-374s&amp;&amp;
-http://%ill%/fiftyeight/jane_bday/mvc-375s&amp;&amp;</pre>
+                    <script src="https://gist.github.com/2718980.js?file=jane_bday.txt"></script>
+                  </pre>
                 </div>
               </div>
             </div>
